--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Leaflet mobile example</title>
 
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<link rel="stylesheet" href="libs/leaflet.css" />
+	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="style.css" />
 
 	<script src="libs/jquery-1.12.1.min.js"></script>
+	<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 	<script src="libs/leaflet.js"></script>
 	<script src="libs/typeahead.bundle.min.js"></script>
 
+	<title>Central Places in Wikipedia</title>
+
 </head>
+
 <body>
 	<div id="map"></div>
-	<div id="search"></div>
+	<div id="search">
+		<div class="input-group">
+			<span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span>
+			<input type="text" class="form-control typeahead" placeholder="Search for a place..." aria-describedby="basic-addon1">
+		</div>
+	</div>
 
 	<script>
 		var map = L.map('map').setView([50, 9], 6);;
@@ -26,7 +37,7 @@
 			id: 'stamen',
 			subdomains: ['a', 'b', 'c', 'd']
 		}).addTo(map);
-
 	</script>
 </body>
+
 </html>
