Typeahead is working; Bootstrap removed (too much overhead)

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,11 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<link rel="stylesheet" href="libs/leaflet.css" />
-	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="style.css" />
 
 	<script src="libs/jquery-1.12.1.min.js"></script>
-	<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 	<script src="libs/leaflet.js"></script>
 	<script src="libs/typeahead.bundle.min.js"></script>
 
@@ -22,21 +20,71 @@
 <body>
 	<div id="map"></div>
 	<div id="search">
-		<div class="input-group">
-			<span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span>
-			<input type="text" class="form-control typeahead" placeholder="Search for a place..." aria-describedby="basic-addon1">
-		</div>
+		<input type="text" class="typeahead" placeholder="Search for a place..." />
 	</div>
 
 	<script>
-		var map = L.map('map').setView([50, 9], 6);;
+		$(document).ready(function() {
+			// setting up the map
+			var map = L.map('map').setView([50, 9], 6);;
 
-		L.tileLayer('http://{s}.tile.stamen.com/toner-lite/{z}/{x}/{y}.png', {
-			maxZoom: 18,
-			attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.',
-			id: 'stamen',
-			subdomains: ['a', 'b', 'c', 'd']
-		}).addTo(map);
+			L.tileLayer('http://{s}.tile.stamen.com/toner-lite/{z}/{x}/{y}.png', {
+				maxZoom: 18,
+				attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.',
+				id: 'stamen',
+				subdomains: ['a', 'b', 'c', 'd']
+			}).addTo(map);
+
+
+
+			// setting up the search function
+
+			var places = new Bloodhound({
+				datumTokenizer: function(datum) {
+					return Bloodhound.tokenizers.whitespace(datum.page);
+				},
+				queryTokenizer: Bloodhound.tokenizers.whitespace,
+				remote: {
+					url: 'search/%QUERY',
+					wildcard: '%QUERY',
+					filter: function(places) {
+						console.log(places);
+						// Map the remote source JSON array to a JavaScript object array
+						return $.map(places.results, function(p) {
+							return {
+								page: p.page,
+								page_id: p.page_id,
+							};
+						});
+					}
+				}
+			});
+
+			// passing in `null` for the `options` arguments will result in the default
+			// options being used
+			$('#search .typeahead').typeahead(null, {
+				name: 'places',
+				displayKey: 'page',
+				source: places
+			});
+
+			// var placeHound = new Bloodhound({
+			// 	datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+			// 	queryTokenizer: Bloodhound.tokenizers.whitespace,
+			// 	// prefetch: '../data/films/post_1960.json',
+			// 	remote: {
+			// 		url: 'place/%QUERY',
+			// 		wildcard: '%QUERY'
+			// 	}
+			// });
+			//
+			// $('#placesearch .typeahead').typeahead(null, {
+			// 	name: 'placesearch',
+			// 	display: 'value',
+			// 	source: placeHound
+			// });
+
+		});
 	</script>
 </body>
 
