--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,175 +1,164 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<link rel="stylesheet" href="libs/leaflet.label.css" />
-	<link rel="stylesheet" href="libs/leaflet.css" />
-	<link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="libs/leaflet.label.css"/>
+        <link rel="stylesheet" href="libs/leaflet.css"/>
+        <link rel="stylesheet" href="style.css"/>
 
-	<script src="libs/jquery-1.12.1.min.js"></script>
-	<script src="libs/leaflet.js"></script>
-	<script src="libs/leaflet.label.js"></script>
-	<script src="libs/typeahead.bundle.min.js"></script>
-	<script src="libs/rcolor.js"></script>
-	<!-- See https://github.com/sterlingwes/RandomColor -->
+        <script src="libs/jquery-1.12.1.min.js"></script>
+        <script src="libs/leaflet.js"></script>
+        <script src="libs/leaflet.label.js"></script>
+        <script src="libs/typeahead.bundle.min.js"></script>
+        <script src="libs/rcolor.js"></script>
+        <!-- See https://github.com/sterlingwes/RandomColor -->
 
-	<title>Central Places in Wikipedia</title>
+        <title>Central Places in Wikipedia</title>
 
-</head>
+    </head>
 
-<body>
-	<div id="map"></div>
-	<div id="menu">
-		<div id="search">
-			<input type="text" class="typeahead" placeholder="Search for a place..." />
-			<div class="select-style">
-				<select id="limit">
-					<option value="6">6</option>
-					<option value="10" selected>10</option>
-					<option value="20">20</option>
-					<option value="30">30</option>
-					<option value="40">40</option>
-					<option value="40">50</option>
-				</select>
-			</div>
-		</div>
-	</div>
-	<div id="alert">Ooops...</div>
+    <body>
+        <div id="map"></div>
+        <div id="menu">
+            <div id="search">
+                <input type="text" class="typeahead" placeholder="Search for a place..."/>
+                <div class="select-style">
+                    <select id="limit">
+                        <option value="6">6</option>
+                        <option value="10" selected>10</option>
+                        <option value="20">20</option>
+                        <option value="30">30</option>
+                        <option value="40">40</option>
+                        <option value="40">50</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div id="alert">Ooops...</div>
 
-	<script>
-		$(document).ready(function() {
+        <script>
+            $(document).ready(function () {
 
-			var color = new RColor;
+                var color = new RColor;
 
-			// setting up the map
-			var map = L.map('map').setView([50, 9], 6);;
+                // setting up the map
+                var map = L.map('map').setView([
+                    50, 9
+                ], 6);;
 
-			L.tileLayer('http://{s}.tile.stamen.com/toner-lite/{z}/{x}/{y}.png', {
-				maxZoom: 18,
-				attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.',
-				id: 'stamen',
-				subdomains: ['a', 'b', 'c', 'd']
-			}).addTo(map);
+                L.tileLayer('http://{s}.tile.stamen.com/toner-lite/{z}/{x}/{y}.png', {
+                    maxZoom: 18,
+                    attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright"' +
+                            '>ODbL</a>.',
+                    id: 'stamen',
+                    subdomains: ['a', 'b', 'c', 'd']
+                }).addTo(map);
 
+                // setting up the search function This effectively turns off tokenization, which is desired in our case:
+                function customTokenizer(datum) {
+                    return datum.page;
+                }
 
+                var places = new Bloodhound({
+                    datumTokenizer: customTokenizer,
+                    queryTokenizer: Bloodhound.tokenizers.whitespace,
+                    remote: {
+                        url: 'search/%QUERY',
+                        wildcard: '%QUERY',
+                        filter: function (places) {
+                            // console.log(places); Map the remote source JSON array to a JavaScript object array
+                            return $.map(places.results, function (p) {
+                                return {page: p.page, page_id: p.page_id};
+                            });
+                        }
+                    }
+                });
 
-			// setting up the search function
+                // passing in `null` for the `options` arguments will result in the default options being used
+                $('#search .typeahead').typeahead(null, {
+                    name: 'places',
+                    displayKey: 'page',
+                    source: places
+                });
 
-			// This effectively turns off tokenization, which is desired in our case:
-			function customTokenizer(datum) {
-				return datum.page;
-			}
+                // Telling the typeahead plugin what to do when a result is selected:
+                $('.typeahead').bind('typeahead:select', function (ev, suggestion) {
+                    getLinksTo(suggestion.page_id);
+                });
 
-			var places = new Bloodhound({
-				datumTokenizer: customTokenizer,
-				queryTokenizer: Bloodhound.tokenizers.whitespace,
-				remote: {
-					url: 'search/%QUERY',
-					wildcard: '%QUERY',
-					filter: function(places) {
-						// console.log(places);
-						// Map the remote source JSON array to a JavaScript object array
-						return $.map(places.results, function(p) {
-							return {
-								page: p.page,
-								page_id: p.page_id,
-							};
-						});
-					}
-				}
-			});
+                function getLinksTo(id) {
 
-			// passing in `null` for the `options` arguments will result in the default
-			// options being used
-			$('#search .typeahead').typeahead(null, {
-				name: 'places',
-				displayKey: 'page',
-				source: places
-			});
+                    clr = color.get(true)
 
-			// Telling the typeahead plugin what to do when a result is selected:
-			$('.typeahead').bind('typeahead:select', function(ev, suggestion) {
-				getLinksTo(suggestion.page_id);
-			});
+                    // pick a random color for this subnetwork
+                    var geojsonMarkerOptions = {
+                        radius: 5,
+                        fillColor: clr,
+                        color: "#000",
+                        weight: 1,
+                        opacity: 1,
+                        fillOpacity: 0.8
+                    };
 
-			function getLinksTo(id) {
+                    // load the linking lines
+                    $.get("linksto/" + id + "/" + $("#limit").val(), function (place) {
 
-				clr = color.get(true)
+                        console.log($("#limit").val());
 
-				// pick a random color for this subnetwork
-				var geojsonMarkerOptions = {
-					radius: 5,
-					fillColor: clr,
-					color: "#000",
-					weight: 1,
-					opacity: 1,
-					fillOpacity: 0.8
-				};
+                        p = L.geoJson(place, {
+                            onEachFeature: onEachFeature,
+                            style: {
+                                "color": clr
+                            }
+                        })
+                        p.addTo(map);
+                        map.fitBounds(p.getBounds());
+                    })
 
-				// load the linking lines
-				$.get("linksto/" + id + "/" + $( "#limit" ).val(), function(place) {
+                    $.get("place/" + id, function (place) {
+                        p = L.geoJson(place, {
+                            // onEachFeature: onEachFeature,
+                            pointToLayer: function (feature, latlng) {
+                                return L.circleMarker(latlng, geojsonMarkerOptions).bindLabel(feature.properties.page);
+                            }
+                        })
+                        p.addTo(map);
+                    })
 
-					console.log($( "#limit" ).val());
+                    // load the places linking to this one
+                    $.get("placeslinkingto/" + id + "/" + $("#limit").val(), function (place) {
 
-					p = L.geoJson(place, {
-						onEachFeature: onEachFeature,
-						style: {
-							"color": clr
-						}
-					})
-					p.addTo(map);
-					map.fitBounds(p.getBounds());
-				})
+                        try {
+                            p = L.geoJson(place, {
+                                onEachFeature: onEachFeature,
+                                pointToLayer: function (feature, latlng) {
+                                    return L.circleMarker(latlng, geojsonMarkerOptions).bindLabel(feature.properties.page);
+                                }
+                            })
+                            p.addTo(map);
+                        } catch (err) {
+							console.log("No results found.")
+                            $("#alert").html("No pages linking to this one found.").show().delay(3000).fadeOut();;
+                        }
+                    })
 
-				$.get("place/" + id, function(place) {
-					p = L.geoJson(place, {
-						// onEachFeature: onEachFeature,
-						pointToLayer: function(feature, latlng) {
-							return L.circleMarker(latlng, geojsonMarkerOptions).bindLabel(feature.properties.page);
-						}
-					})
-					p.addTo(map);
-				})
+                };
 
-				// load the places linking to this one
-				$.get("placeslinkingto/" + id + "/" + $( "#limit" ).val(), function(place) {
+				// make every point "clickable" so that the network for that point is shown
+                function onEachFeature(feature, layer) {
 
-					p = L.geoJson(place, {
-						onEachFeature: onEachFeature,
-						pointToLayer: function(feature, latlng) {
-							return L.circleMarker(latlng, geojsonMarkerOptions).bindLabel(feature.properties.page);
-						}
-					})
-					p.addTo(map);
-				})
+                    layer.on('click', function (e) {
+                        getLinksTo(e.target.feature.properties.page_id);
+                    });
 
-			};
+                }
 
-			function onEachFeature(feature, layer) {
-
-				layer.on('click', function(e) {
-					getLinksTo(e.target.feature.properties.page_id);
-				});
-
-				// layer.on('mouseover', function(e) {
-				// 	var popup = L.popup()
-				// 		.setLatLng(e.latlng)
-				// 		.setContent(e.target.feature.properties.from)
-				// 		.openOn(map);
-				// });
-				//
-				// layer.on('mouseout', function(e) {
-				// 	this.closePopup();
-				// });
-
-			}
-
-		});
-	</script>
-</body>
+            });
+        </script>
+    </body>
 
 </html>
