--- a/webapp/index.html
+++ b/webapp/index.html
@@ -27,6 +27,7 @@
             <div id="search">
                 <input type="text" class="typeahead" placeholder="Search for a place..."/>
                 <div class="select-style">
+					Max results:
                     <select id="limit">
                         <option value="6">6</option>
                         <option value="10" selected>10</option>
@@ -35,9 +36,12 @@
                         <option value="40">40</option>
                         <option value="40">50</option>
                     </select>
+					Cities only?
+					<input type="checkbox" id="citiesonly" />
                 </div>
             </div>
         </div>
+		<div id="info">Info</div>
         <div id="alert">Ooops...</div>
 
         <script>
@@ -68,9 +72,9 @@
                     queryTokenizer: Bloodhound.tokenizers.whitespace,
                     remote: {
                         url: 'search/%QUERY',
-                        wildcard: '%QUERY',
+						wildcard: '%QUERY',
                         filter: function (places) {
-                            // console.log(places); Map the remote source JSON array to a JavaScript object array
+                            // Map the remote source JSON array to a JavaScript object array
                             return $.map(places.results, function (p) {
                                 return {page: p.page, page_id: p.page_id};
                             });
@@ -87,14 +91,18 @@
 
                 // Telling the typeahead plugin what to do when a result is selected:
                 $('.typeahead').bind('typeahead:select', function (ev, suggestion) {
+					$("#info").html("Thinking...").show();
                     getLinksTo(suggestion.page_id);
                 });
 
+				// loads a geojson with the links to the place with ID id,
+				// the points for the linking places, and the place itself
+				// and adds all of that to the map
                 function getLinksTo(id) {
 
                     clr = color.get(true)
 
-                    // pick a random color for this subnetwork
+					// pick a random color for this subnetwork
                     var geojsonMarkerOptions = {
                         radius: 5,
                         fillColor: clr,
@@ -105,7 +113,7 @@
                     };
 
                     // load the linking lines
-                    $.get("linksto/" + id + "/" + $("#limit").val(), function (place) {
+                    $.get("linksto/" + id + "/" + $("#limit").val() + onlyCities(), function (place) {
 
                         console.log($("#limit").val());
 
@@ -126,11 +134,12 @@
                                 return L.circleMarker(latlng, geojsonMarkerOptions).bindLabel(feature.properties.page);
                             }
                         })
-                        p.addTo(map);
+                        p.setStyle({fillColor: 'black'});
+						p.addTo(map);
                     })
 
                     // load the places linking to this one
-                    $.get("placeslinkingto/" + id + "/" + $("#limit").val(), function (place) {
+                    $.get("placeslinkingto/" + id + "/" + $("#limit").val() + onlyCities(), function (place) {
 
                         try {
                             p = L.geoJson(place, {
@@ -140,9 +149,9 @@
                                 }
                             })
                             p.addTo(map);
+							$("#info").hide();
                         } catch (err) {
-							console.log("No results found.")
-                            $("#alert").html("No pages linking to this one found.").show().delay(3000).fadeOut();;
+							$("#alert").html("No pages linking to this one found.").show().delay(3000).fadeOut();
                         }
                     })
 
@@ -156,6 +165,16 @@
                     });
 
                 }
+
+				// Checks whether that checkbox checked and returns a string that will
+				// reflect that in the search URLs
+				function onlyCities(){
+					if ($("#citiesonly").prop( "checked" )){
+						return "/citiesonly";
+					} else {
+						return "";
+					}
+				}
 
             });
         </script>
